namespace ipk_25_chat.Protocol;

public enum StateType
{
    Start,
    Auth,
    Open,
    Join,
    End,
}